# nbl-subtitle-task-force

./: .gitignore  README.md  api-server.spec  api_server.py  build.bat  pyproject.toml  release-build.bat  release-push.bat  requirements-build.txt
src/srt_translator/: __init__.py  agent_plan.py  cli.py  config.py  glossary.py  llm_client.py  merger.py  models.py  parser.py  prompts.py  streaming.py  streaming_pipeline.py  text_utils.py  translator.py
tests/: __init__.py  test_agent_plan.py  test_api.py  test_cli.py  test_parser.py  test_prompts.py  test_release_safety.py  test_streaming.py  test_streaming_pipeline.py
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
ui/src/components/: PromptModal.tsx  SettingsPanel.tsx  TranslationView.tsx  subtitleFile.ts
ui/src/hooks/: useSettings.ts
ui/test/: subtitleFile.test.mjs
